feat: pre-register partial transactions in AWS Lambda
When used with the Lambda extension >=v1.4.0, this results in
transactions being reported for Lambda timeout, uncaughtException,
and unhandledRejection.

Closes: #3136
Closes: #2379

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,6 +40,15 @@ Notes:
 [float]
 ===== Features
 
+* Improve error handling with AWS Lambda. When used together with the
+  https://github.com/elastic/apm-aws-lambda[Elastic AWS Lambda extension]
+  v1.4.0 or greater, the APM agent will pre-register a partial transaction
+  before the user's handler function is run. If the handler function fails
+  with a Lambda timeout, `uncaughtException`, or `unhandledRejection` then
+  the Lambda extension will report the failed transaction so it can be
+  seen in the Kibana APM app. ({issues}3136[#3136])
+
+
 [float]
 ===== Bug fixes
 
