revert the workaround/fix for contextManager:patch, make that a curr limitation
The usage of `agent._instrumentation` breaks a lot of test code because
of the AgentMock. A follow-up change will fix this all up (dropping
usage of AgentMock). I'll do this separately to keep this change more
focused

--- a/docs/lambda.asciidoc
+++ b/docs/lambda.asciidoc
@@ -90,3 +90,4 @@ include::./shared-set-up.asciidoc[tag=error-logging]
 
 * System and custom metrics are not collected for Lambda functions. This is both because most of those are irrelevant
 and because the interval-based event sending model is not suitable for FaaS environments.
+* Lambda instrumentation does not currently work when the (deprecated) <<context-manager,`contextManager: 'patch'`>> configuration setting is used.
