--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,6 +40,8 @@ Notes:
 [float]
 ===== Features
 
+* Add support for @aws-sdk/client-s3 ({pull}3287[#3287])
+
 * Add support for mysql2@3. Contributed by @firecow. ({pull}3301[#3301])
 
 * Improve error handling with AWS Lambda. When used together with the
