feat: add @apollo/server@4 support (#3203)
Closes: #2980
Co-authored-by: Trent Mick <trent.mick@elastic.co>

--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -127,6 +127,7 @@ These modules override that behavior to give better insights into specialized HT
 |Module |Version |Note
 |https://www.npmjs.com/package/express-graphql[express-graphql] |>=0.6.1 <0.13.0 |Will name all transactions by the GraphQL query name. There is a https://github.com/elastic/apm-agent-nodejs/issues/2516[known issue with node <10.4]. This module is deprecated and is no longer tested.
 |https://www.npmjs.com/package/apollo-server-express[apollo-server-express] |>=2.0.4 <4|Will name all transactions by the GraphQL query name. Versions before 2.9.6 are no longer tested.
+|https://www.npmjs.com/package/@apollo/server[@apollo/server] |>=4.0.0|Will name all transactions by the GraphQL query name
 |=======================================================================
 
 [float]
