--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -68,6 +68,8 @@ Notes:
 [float]
 ===== Chores
 
+* Add cookie map in transactions' request context and redact cookie header ({pull}3304[#3322])
+
 * Stop testing `express-graphql` instrumentation -- the module is deprecated.
   ({pull}3304[#3304])
 
