--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -32,10 +32,8 @@ Notes:
 === Node.js Agent version 3.x
 
 
-==== Unreleased
-
-[float]
-===== Breaking changes
+[[release-notes-3.46.0]]
+==== 3.46.0 - 2023/05/10
 
 [float]
 ===== Features
@@ -61,9 +59,6 @@ Notes:
   metrics to APM server. As well, you may use the OpenTelemetry Metrics SDK
   and the APM agent will automatically add a MetricReader to ship metrics to
   APM server. See the <<opentelemetry-bridge>> for details. ({pull}3152[#3152])
-
-[float]
-===== Bug fixes
 
 [float]
 ===== Chores
