chore: add placeholder for version replacements in docs
Co-authored-by: Trent Mick <trent.mick@elastic.co>

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -977,7 +977,7 @@ The `sanitizeFieldNames` will redact any matched _field names_.  If you wish to 
 [[filter-http-headers]]
 ==== `filterHttpHeaders`
 
-[small]#Deprecated in: v3.x.x
+[small]#Deprecated in: REPLACEME
 
 * *Type:* Boolean
 * *Default:* `true`
