--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -970,14 +970,14 @@ Remove sensitive data sent to Elastic APM.
 
 The `sanitizeFieldNames` configuration value allows you to configure a list of wildcard patterns of field names which should be redacted from agent payloads. Wildcard matches are
 case-insensitive by default. You may make wildcard searches case-sensitive by
-using the `(?-i)` prefix. These patterns apply to the request and response HTTP headers, as well as any form field captured during an `application/x-www-form-urlencoded` data request.
+using the `(?-i)` prefix. These patterns apply to the request and response HTTP headers, HTTP request cookies, and also any form field captured during an `application/x-www-form-urlencoded` data request.
 
 The `sanitizeFieldNames` will redact any matched _field names_.  If you wish to filter or _redact_ other data the <<apm-add-filter,API filtering functions>> may be a better choice.
 
 [[filter-http-headers]]
 ==== `filterHttpHeaders`
 
-[small]#Deprecated in: REPLACEME
+[small]#Deprecated in: v3.x.x
 
 * *Type:* Boolean
 * *Default:* `true`
