--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -986,6 +986,12 @@ The `sanitizeFieldNames` will redact any matched _field names_.  If you wish to 
 This configuration is *deprecated* and will be removed in a future major version. If you whish to filter or or _redact_ other 
 data the <<apm-add-filter,API filtering functions>> or <<sanitize-field-names, Sanitize fields configuration>> may be a better choice.
 
+In versions before REPLACEME this option was `true` by default. Agent redacted cookies whose name matched any of `sanitizaFieldNames` expressions.
+As of version REPLACEME this option has no longer use since request cookies are parsed and stored into
+`transaction.context.request.cookies` name/value pair. These new fields will be redacted if their name
+match with any of the `sanitizaFieldNames` expressions threfore having the same behaviour. To replicate `httpFilterHeaders = false` you just
+have to modify `sanitizaFieldNames` option to make sure no HTTP request cookie is redacted.
+
 [[disable-instrumentations]]
 ==== `disableInstrumentations`
 
