--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -40,6 +40,8 @@ Notes:
 [float]
 ===== Features
 
+* Add support for 'knex' version v1 ({pull}3355[#3355])
+
 * Add support for @aws-sdk/client-s3 ({pull}3287[#3287])
 
 * Add <<capture-body>> support for Fastify instrumentation.
