chore: update CANGELOG

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,8 +28,27 @@ Notes:
         ==== x.x.x - YYYY/MM/DD
 ////
 
+
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
+
+==== Unreleased
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
+[float]
+===== Bug fixes
+
+[float]
+===== Chores
+
+* Move configuration to its own module and add normalizer tests.
+  ({pull}3358[#3358])
+
 
 
 [[release-notes-3.46.0]]
