--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -48,6 +48,9 @@ Notes:
 [float]
 ===== Chores
 
+* Extract configuration's transport to its own module
+  ({pull}3372[#3372])
+
 
 [[release-notes-3.46.0]]
 ==== 3.46.0 - 2023/05/15
