--- a/docs/opentracing.asciidoc
+++ b/docs/opentracing.asciidoc
@@ -36,7 +36,7 @@ npm install elastic-apm-node elastic-apm-node-opentracing --save
 [[ot-terminologies]]
 === OpenTracing vs Elastic APM terminologies
 
-Elastic APM differentiates between {apm-guide-ref}/transactions.html[transactions] and {apm-guide-ref}/transaction-spans.html[spans].
+Elastic APM differentiates between {apm-guide-ref}/data-model-transactions.html[transactions] and {apm-guide-ref}/data-model-spans.html[spans].
 In the context of OpenTracing, a transaction can be thought of as a special kind of span.
 
 Because OpenTracing natively only has the concept of spans,
@@ -166,7 +166,7 @@ Baggage items are silently dropped.
 
 Only error logging is supported.
 Logging an Error object on the OpenTracing span will create an Elastic APM
-{apm-guide-ref}/errors.html[error].
+{apm-guide-ref}/data-model-errors.html[error].
 Example:
 
 [source,js]
