chore: move transport to its own module `apm-client` (#3372)
- create a new module named `apm-client` which exports `createApmClient(config, agent)` API
- move `NoopTransport` as a new client type in `./lib/apm-client/noop-apm-client.js` and rename it to `NoopApmClient`
- create `http-apm-client` module which contains all logic to instantiate an `ElasticAPMHttpClient`
- use `createApmClient` API in the agent to set `_transport` property

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -48,6 +48,9 @@ Notes:
 [float]
 ===== Chores
 
+* Extract configuration's transport property to new `apm-client` module
+  ({pull}3372[#3372])
+
 
 [[release-notes-3.46.0]]
 ==== 3.46.0 - 2023/05/15
