feature: add support for knex versions >1 <3 (#3355)
Co-authored-by: Trent Mick <trent.mick@elastic.co>

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -39,6 +39,8 @@ Notes:
 [float]
 ===== Features
 
+* Add support for 'knex' version v1 and v2
+  ({pull}3355[#3355])
 * Add `tedious@16.x` support
   ({pull}3366[#3366])
 
