--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -40,6 +40,8 @@ include::./log-correlation.asciidoc[]
 
 include::./source-maps.asciidoc[]
 
+include::./esm.asciidoc[]
+
 include::./distributed-tracing.asciidoc[]
 
 include::./message-queues.asciidoc[]
