--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -28,9 +28,6 @@ Notes:
         ==== x.x.x - YYYY/MM/DD
 ////
 
-[[release-notes-3.x]]
-=== Node.js Agent version 3.x
-
 ==== Unreleased
 
 [float]
@@ -39,8 +36,28 @@ Notes:
 [float]
 ===== Features
 
+[float]
+===== Bug fixes
+
+[float]
+===== Chores
+
+
+[[release-notes-3.47.0]]
+=== Node.js Agent version 3.47.0
+
+[float]
+===== Breaking changes
+
+[float]
+===== Features
+
 * Add support for 'knex' version v1 and v2. ({pull}3355[#3355])
+
 * Add `tedious@16.x` support. ({pull}3366[#3366])
+
+* Add `apm.setGlobalLabel()` to dynamically extend the `globalLabels` set in
+  the initial config. Refer to <<apm-set-global-label>> for details. ({pull}3337[#3337])
 
 [float]
 ===== Bug fixes
@@ -99,8 +116,6 @@ in a Worker will *not* start the APM agent. Instead, one must use:
   metrics to APM server. As well, you may use the OpenTelemetry Metrics SDK
   and the APM agent will automatically add a MetricReader to ship metrics to
   APM server. See the <<opentelemetry-bridge>> for details. ({pull}3152[#3152])
-
-* Add `apm.setGlobalLabel()` to dynamically extend the `globalLabels` set in the initial config. Refer to <<apm-set-global-label>> for details. ({pull}3337[#3337])
 
 [float]
 ===== Chores
