--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -31,18 +31,18 @@ Notes:
 [[release-notes-3.x]]
 === Node.js Agent version 3.x
 
-==== Unreleased
-
-[float]
-===== Breaking changes
+[[release-notes-3.47.0]]
+==== 3.47.0 - 2023/06/14
 
 [float]
 ===== Features
 
-* Add support for 'knex' version v1 and v2. ({pull}3355[#3355])
+* Add support for `knex` version v1 and v2. ({pull}3355[#3355])
+
 * Add `tedious@16.x` support. ({pull}3366[#3366])
-* Add `apm.setGlobalLabel()` to dynamically extend the `globalLabels` set in the initial config.
-  Refer to <<apm-set-global-label>> for details. ({pull}3337[#3337])
+
+* Add `apm.setGlobalLabel()` to dynamically extend the `globalLabels` set in
+  the initial config. Refer to <<apm-set-global-label>> for details. ({pull}3337[#3337])
 
 [float]
 ===== Bug fixes
