correct the NOTICE entry; tweak the http-apm-client readme; add the http client changelog for history

--- a/CHANGELOG.asciidoc
+++ b/CHANGELOG.asciidoc
@@ -49,6 +49,9 @@ Notes:
 [float]
 ===== Chores
 
+* Inline the `elastic-apm-http-client` package code into this repo.
+  ({issues}3506[#3506])
+
 
 [[release-notes-3.48.0]]
 ==== 3.48.0 - 2023/07/07
